@@ -1,6 +1,8 @@
 version 1.9.7, in progress
 - "leverage" command: add a --quiet option and add calculation of the
   cross-validation criterion
+- Speed up the production of bootstrapped confidence bands for impulse 
+  responses in VECM models
 
 2011-10-17 version 1.9.6
 - Add an importer for xlsx (Office Open XML) worksheet data
